fix: Remove height from book cover images when displayed in the cards on the wish_list.html page so that the image does not become distorted when viewed on a mobile device.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,6 +81,7 @@ h1, h2, h3, h4, h5 {
     font-weight: bolder !important;
 }
 
+/* Bookmarks ------------------------------------- */
 button.bookmark {
     border-color: transparent;
     background-color: transparent;
@@ -330,7 +331,6 @@ footer a:hover{
 /* Wish List Page ----------------------*/
 .card.horizontal .card-image img {
     padding: 24px;
-    height: 200px; /* Your height here */
     overflow: hidden;
 }
 
